--- a/ipynb/Map performance analysis.ipynb
+++ b/ipynb/Map performance analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 30.1 ms per loop\n"
+      "10 loops, best of 3: 31.8 ms per loop\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
      "text": [
       "Help on function generate_block in module gen_map:\n",
       "\n",
-      "generate_block(seed, idx=0, idy=0, map_size=256)\n",
+      "generate_block(seed, idx=0, idy=0, map_size=256, octaves=8)\n",
       "    Block generation algorithm using simplex noise\n",
       "\n"
      ]
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -98,12 +98,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 18 ms per loop\n"
+      "100 loops, best of 3: 11.4 ms per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit gen_map.generate_block(0, 0, 0, 96)"
+    "%timeit gen_map.generate_block(0., 0, 0, 96)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function block_snoise3 in module gen_map:\n",
+      "\n",
+      "block_snoise3(seed=0.0, idx=0, idy=0, map_size=96, octaves=8)\n",
+      "    use snoise3 for block generation\n",
+      "    \n",
+      "    seed\n",
+      "        needs to be float. Use z axis of snoise3 as the seed. a whole number\n",
+      "        difference is big enough to not have much in common with the previous\n",
+      "    \n",
+      "    octaves\n",
+      "      increase to increaase detail/roughness\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(gen_map.block_snoise3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 12.8 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit gen_map.block_snoise3(0., idx=0, idy=0, map_size=96)"
    ]
   },
   {
